# OrchestrateLang

./: .gitignore  Cargo.toml  LANGUAGE_REFERENCE.md  LICENSE  PLANNED_FEATURES.md  README.md  SANDBOXED_SERVERLETS.md  SECRET_SERVERLETS.md  SERVERLET_FILES.md  err_test.orch  err_test2.orch
Documentation/: IMPROVEMENT_PLAN.md  NEXT_LEVEL_PLAN.md
VS Code extension/: .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  orchestrate-lang-0.1.0.vsix  package.json
VS Code extension/snippets/: orchestrate.json
err_dir2/: module.orch
examples/: async_parallel.orch  closures.orch  enums.orch  error_handling.orch  for_loops.orch  foreign_c_math_test.orch  foreign_cpp_stats_test.orch  foreign_mixed_all_test.orch  foreign_rust_math_test.orch  foreign_rust_mixed_test.orch  foreign_rust_strings_test.orch  generics.orch  hello.orch  multi_process.orch  persistent_serverlet_test.orch  pipeline.orch  prom_demo.orch  resilient_serverlet.orch  secret_serverlet.orch  string_interpolation.orch  supervised_process.orch  task_demo.orch  test_free_vars.orch  test_hooks.orch  test_module_return_types.orch  test_parallel_capture_combo.orch  test_parallel_free_vars_1.orch  test_parallel_free_vars_2.orch  test_parallel_free_vars_3.orch  test_parallel_scope.orch  test_serverlet.orch  test_type_mismatch.orch  test_undefined_var.orch
src/: ast.rs  codegen.rs  driver.rs  errors.rs  ffi_parser.rs  ffi_rust.rs  lexer.rs  lib.rs  lsp_main.rs  main.rs  parser.rs  prom.rs  typechecker.rs
src/codegen/: mod.rs  (+3 more)
tests/: codegen_snapshot_tests.rs  error_cases_test.rs  runtime_tests.rs
(+46 files in other folders)
